--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Categories of food</h1>
 <ul>
-  <% @category.each do |cat| %>
+  <% @categories.each do |cat| %>
     <li>
       <%= link_to cat.name, category_path(cat) %>
+      <%= link_to "Delete", category_path(cat), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delte this?"}%>
     </li>
   <% end %>
 </ul>
+
+<%= link_to "Add a new category", new_category_path%>
