--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,27 @@
-<h1>Categories of food</h1>
-<ul>
-  <% @categories.each do |cat| %>
-    <li>
-      <%= link_to cat.name, category_path(cat) %>
-      <%= link_to "Delete", category_path(cat), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delte this?"}%>
-    </li>
-  <% end %>
-</ul>
-
-<%= link_to "Add a new category", new_category_path%>
+<div class="container mt-4">
+  <div class="justify-content-between d-flex mb-3 align-items-center">
+    <h1 class="mb-0">List of categories</h1>
+    <%= link_to "New category", new_category_path, class: "btn btn-warning" %>
+  </div>
+  <div class="d-flex flex-direction-column w-50 gap-3">
+    <% @categories.each do |cat| %>
+      <% image_url = cat.photo.attached? ? cat.photo : "https://res.cloudinary.com/do2s320cj/image/upload/v1747150478/pizza-3010062_1280_tjrgo0.jpg" %>
+      <div class="col">
+        <div class="card h-100 text-center custom-card position-relative">
+          <%= image_tag(image_url, class: "img-cat card-img-top") %>
+          <div class="position-absolute end-0">
+            <%= link_to category_path(cat), data: {turbo_method: :delete, turbo_confirm: "Are yousure?"}, class: "btn btn-outline-danger" do %>
+              <span>
+                <i class="fa-solid fa-trash-can"></i>
+              </span>
+            <% end %>
+          </div>
+          <div class="overlay-title bg-transparent">
+            <%= link_to cat.name, category_path(cat), class: "text-white text-decoration-none fs-4" %>
+            <p class="text-white"><%= "#{cat.recipes.joins(:bookmarks).distinct.count}"%> recipes</p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
