--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,21 @@
-<h1>Add a new category</h1>
+<div class="container mt-5 d-flex justify-content-center">
+  <div class="card shadow-sm p-4 custom-new">
+    <div class="card-body">
+      <h2 class="card-title mb-4 text-center">Add a New Category</h2>
 
-<%= simple_form_for @category do |f|%>
-  <%= f.input :name%>
-  <%= f.submit "Create" %>
-<% end %>
+      <%= simple_form_for @category, html: { multipart: true } do |f| %>
+        <div class="mb-3">
+          <%= f.input :name, placeholder: "e.g. Chinese, Vegan...", label: "Category Name" %>
+        </div>
+
+        <div class="mb-3">
+          <%= f.input :photo, as: :file, label: "Upload Image" %>
+        </div>
+
+        <div class="d-grid w-50">
+          <%= f.submit "Create", class: "btn btn-warning" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
