--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,16 +1,58 @@
-<h1><%= @category.name %></h1>
+<div class="position-relative text-center overflow-hidden costum-props" >
+  <%= image_tag(@category.photo.attached? ? @category.photo : "finalf", class: "w-100 object-fit-cover") %>
 
-<h2>Saved recipes:</h2>
-<ul>
-    <% @category.bookmarks.each do |bookmark|%>
-      <li>
-        <%= bookmark.recipe.name%>
-        <%= bookmark.comment%>
-        <%= link_to "delte", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirmation: "Are you sure you want to delete this recipe?"}%>
-      </li>
+  <div class="position-absolute top-50 start-50 translate-middle text-white">
+    <h1 class="fw-bold"><%= @category.name %></h1>
+  </div>
+</div>
+
+<section class="container p-3">
+  <div class="d-flex flex-direction-row justify-content-between pb-5">
+    <h2>Recipes</h2>
+    <%= link_to new_category_bookmark_path(@category), class: "btn btn-warning" do %>
+      <i class="fa-solid fa-square-plus"></i>
+      <span>Add a recipe</span>
     <% end %>
-</ul>
+  </div>
 
-<%= link_to "edit", edit_category_path(@category)%>
-<%= link_to "➕ Add a Recipe to this category", new_category_bookmark_path(@category)%>
-<%= link_to "Back to categories", categories_path%>
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <% @category.bookmarks.each do |bookmark| %>
+    <% recipe = bookmark.recipe %>
+
+    <div class="col">
+      <div class="card h-100 shadow-sm border-0 position-relative" style="border-radius: 12px;">
+        <%= image_tag recipe.image_url, class: "card-img-top", style: "border-top-left-radius: 12px; border-top-right-radius: 12px; object-fit: cover; height: 200px;" %>
+        <div class="d-flex position-absolute end-0">
+          <%= link_to bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this?"}, class: "btn btn-outline-light" do %>
+            <span>
+              <i class="fa-solid fa-trash-can"></i>
+            </span>
+          <% end %>
+        </div>
+
+        <div class="card-body">
+          <h5 class="card-title fw-bold"><%= recipe.name %></h5>
+          <p class="card-text text-muted" style="font-size: 0.9rem;">
+            <%= recipe.description.truncate(240, omission: "... [read more]") %>
+          </p>
+          <small class="text-muted">
+            <i class="bi bi-chat-quote-fill"></i> <%= bookmark.comment.presence || "my favourite" %>
+          </small>
+        </div>
+      </div>
+    </div>
+
+  <% end %>
+</div>
+  <div class="d-flex pt-4 gap-3">
+  <%= link_to edit_category_path(@category), class: "btn btn-outline-success" do%>
+    <i class="fa-solid fa-file-pen"></i>
+    <span>Edit</span>
+  <% end %>
+  <%= link_to root_path(@category), class: "btn btn-outline-warning" do %>
+    <i class="fa-solid fa-backward"></i>
+    <span>Back to categories</span>
+  <% end %>
+  </div>
+</section>
+3
